# personal-learning-rust

./: .gitignore  LICENSE  README.md
connection_tester/: Cargo.toml
connection_tester/src/: main.rs
fractal_parallel/: Cargo.toml
fractal_parallel/src/: main.rs
gfx-hal-test/: Cargo.toml
gfx-hal-test/src/: main.rs
gfx-hal-test/src/engine/: mod.rs  winitstate.rs
glium-start/: Cargo.toml
glium-start/src/: main.rs
gpp-vulkano/: Cargo.toml
gpp-vulkano/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
guitest/: Cargo.toml
guitest/src/: main.rs
hello/: 404.html  Cargo.toml  hello.html
hello/src/: lib.rs  main.rs
hello_cargo/: Cargo.toml
hello_rust/: main.rs
lists/: Cargo.toml
lists/src/: fifth.rs  first.rs  fourth.rs  lib.rs  second.rs  third.rs
mandelbrot_vulkano/: Cargo.toml
mandelbrot_vulkano/src/: main.rs
maze-generator/: Cargo.toml
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
msngenerator/: ATOCHUNGUS1.ato  ATOORB1.ato  Cargo.toml
msngenerator/src/: main.rs  missions.rs
piston-starting/: Cargo.toml
piston-starting/src/: main.rs
realtime-filesize/: Cargo.toml
realtime-filesize/src/: main.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
sprites-glium/: Cargo.toml
sprites-glium/src/: main.rs
sqtoy/: Cargo.toml
sqtoy/shaders/: rect_150.glslf  rect_150.glslv
sqtoy/src/: main.rs
teapot-glium/: Cargo.toml
teapot-glium/src/: main.rs
vulkan/: Cargo.toml
vulkan/src/: main.rs
vulkanimage/: Cargo.toml
vulkanimage/src/: main.rs
window-vulkan/: Cargo.toml
(+2 files in other folders)
