[package]
name = "gfx-hal-test"
version = "0.1.0"
authors = ["Jarrett P. Locke <jarrett.p.locke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dx12"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
winit = "0.19.2"
gfx-hal = "0.3.0"
log = "0.4.8"
simple_logger = "1.3.0"

[dependencies.gfx-backend-vulkan]
version = "0.3.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3.0"
optional = true